--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
+    "epress": "^0.0.1-security",
     "express": "^5.1.0"
   }
 }
